# sier2-tutorial

./: .gitignore  LICENSE  README.rst  pyproject-old.toml  pyproject.toml  pyproject.toml.unused  pyproject_unused.toml  ruff.toml
docs/source/: conf.py  examples.rst  index.rst
docs/source/tutorials/: _tutorial_5.rst  _tutorial_6.rst  _tutorial_7.rst  _tutorial_8.rst  _tutorial_9.rst  tutorial_0.rst  tutorial_1.rst  tutorial_10.rst  (+9 more)
examples/: README.rst  add_numbers.py  barchart.py  block_library.py  block_logging.py  compatibility.py  config_value.py  dag_add_random.py  dag_config.py  dag_dump.py  dag_exception.py  dag_stop_unstop.py  dag_validate.py  if_else.py  if_else_pause.py  pause.py  raise_exception.py  simple_dag.py  update.py  validate.py
examples-panel/: README.rst  _panel_widgets.py  banner.py  bars.py  block_logging.py  block_visibility.py  dagless.py  default.py  default_values.py  default_values.toml  display.py  fan.py  if_else.py  labels.py  leaflet.py  no-gui-block.py  panel-bars.py  panel-default.py  panel-display.py  panel-fan.py  panel-ifelse.py  panel-load-bars.py  panel-logging.py  panel-or-text.py  panel-stop.py  panel-tree.py  stop-unstop.py  tree.py
examples-panel/obsolete/: leaflet.py  load-bars.py
examples/obsolete/: compatibility.py  config1.py  config2.py  dump.py  library.py  library_add_random.py  logging.py
try/: app.py  topo_fig.py
tutorials/: _tutorial_5a.py  _tutorial_7b.py  _tutorial_8a.py  _tutorial_9a.py  tutorial_0a.py  tutorial_0b.py  tutorial_0c.py  tutorial_10a.py  tutorial_10b.py  tutorial_1a.py  tutorial_2a.py  tutorial_3a.py  tutorial_3b.py  tutorial_4a.py  tutorial_5a.py  tutorial_5b.py  tutorial_6a.py  tutorial_7a.py  tutorial_8a.py  tutorial_9a.py  tutorial_9b.py  tutorial_9c.py
tutorials/tests/: test_tutorial_0a.py
(+15 files in other folders)
