[project]
name = "sier2-tutorial"
version = "0.6"
description = "Block and dag examples"
authors = [
    {name="Algol60", email="algol60 <algol60@users.noreply.github.com>"}
]
readme = "README.rst"
packages = [{include = "sier2_tutorial", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

[dependencies]
python = "^3.11"

sier2 = ">=0.28"

[tool.poetry.plugins."sier2.library"]
export = "sier2_tutorial.shelf"

[[tool.mypy.overrides]]
module = [
    "holoviews",
    "param"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
